fix: no fatal error if opcache is not installed; fix: better horizontal Chrome scrollbar

--- a/src/Ui/Aba/resources/css/styles.scss
+++ b/src/Ui/Aba/resources/css/styles.scss
@@ -144,6 +144,7 @@ img {
 * {
   &::-webkit-scrollbar {
     width: 10px;
+    height: 10px;
   }
 
   /* Track */
